fix: vertical spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,7 @@ body {
   font-family: "Gill Sans";
   font-size: 25px;
   text-transform: uppercase;
+  margin-top: 65.5px;
   margin-bottom: 45px;
   display: block;
 }
@@ -158,7 +159,6 @@ body {
 }
 
 .hero {
-  margin-bottom: 77px;
   height: 500px;
   width: 100%;
   display: flex;
@@ -259,6 +259,7 @@ body {
 
 .client-quote {
   width: 789px;
+  padding: 77px 0 133px 0;
 }
 .client-quote blockquote {
   margin-bottom: 20px;
