--- a/scss/components/_client-quote.scss
+++ b/scss/components/_client-quote.scss
@@ -1,5 +1,7 @@
 .client-quote {
   width: 789px;
+
+  padding: 77px 0 133px 0;
   blockquote {
     margin-bottom: 20px;
     p {
