--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -2,7 +2,6 @@
 
 //Accessibility should use a shadow (text or background) to make test easier to read
 .hero {
-  margin-bottom: 77px;
   height: 500px;
   width: 100%;
 
