--- a/scss/core/_base.scss
+++ b/scss/core/_base.scss
@@ -23,6 +23,7 @@ body {
   font-family: $font-primary;
   font-size: $font-size--25;
   text-transform: uppercase;
+  margin-top: 65.5px;
   margin-bottom: 45px;
   display: block;
 }
